[project]
name = "sandbox-py-flask"
version = "0.0.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.13",
    "inngest>=0.5.1",
    "mypy>=1.16.1",
    "python-dotenv>=1.1.0",
    "ruff>=0.12.0",
    "structlog>=25.4.0",
    "uvicorn>=0.34.3",
]
